[project]
name = "ti-text"
version = "0.0.1"
authors = [
  { name="Brian Totonchi", email="briantotonchi@gmail.com" },
]
description = "Command line tool to convert between 8xp calculator program binaries and readable text"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"